<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:id="@+id/LinearLayoutSettingCredentials"
	android:layout_height="wrap_content" android:layout_width="fill_parent"
	android:layout_marginRight="10px" android:layout_marginLeft="10px"
	android:layout_gravity="center" android:paddingBottom="10dp">
	<LinearLayout android:layout_height="wrap_content"
		android:id="@+id/LinearLayoutSettingCredentialsTop" android:gravity="center_horizontal"
		android:layout_width="fill_parent">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/SettingCredentialDescription"
			android:id="@+id/TextViewSettingCredentialsDescription"></TextView>
	</LinearLayout>
	<TableLayout android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:id="@+id/TableLayoutCredentials"
		android:layout_gravity="fill_horizontal">
		<TableRow android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:id="@+id/TableRowUser"
			android:orientation="horizontal">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/TextViewUser"
				android:text="@string/LblUser"></TextView>
			<EditText android:layout_height="wrap_content" android:id="@+id/EditTextUser"
				android:layout_weight="1" android:layout_width="fill_parent"></EditText>
		</TableRow>
		<TableRow android:layout_height="wrap_content" android:id="@+id/TableRowPassword"
			android:layout_width="fill_parent" android:layout_gravity="fill_horizontal">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/TextViewPassword"
				android:text="@string/LblPassword"></TextView>
			<EditText android:layout_height="wrap_content" android:id="@+id/EditTextPassword"
				android:layout_width="fill_parent" android:layout_weight="1"
				android:inputType="textPassword"></EditText>
		</TableRow>
	</TableLayout>






	<LinearLayout android:layout_height="wrap_content"
		android:id="@+id/LinearLayoutSettingCredentialsBottom"
		android:gravity="fill_horizontal" android:layout_width="fill_parent">
		<ImageButton android:layout_height="wrap_content"
			android:id="@+id/ImageButtonSettingCredentialsSave"
			android:layout_weight="1" android:layout_width="fill_parent"
			android:src="@drawable/ic_menu_save"></ImageButton>
		<ImageButton android:layout_height="wrap_content"
			android:id="@+id/ImageButtonSettingCredentialsCancel"
			android:layout_weight="1" android:layout_width="fill_parent"
			android:src="@drawable/ic_menu_close_clear_cancel" android:clickable="false"></ImageButton>
	</LinearLayout>



<Button android:layout_height="wrap_content" android:id="@+id/SignUpBtn" android:text="@string/MsgNewAccount" android:layout_width="fill_parent" android:textStyle="italic" android:layout_marginBottom="5dp" android:layout_marginTop="10dp"></Button>
</LinearLayout>
